[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1"
http-body = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
axum = { version = "0.7", features = ["default", "ws", "multipart"] }
include_dir = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[registries.crates-io]
protocol = "sparse"
